update package name

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: codable
+name: codable_dart
 description: A codable protocol for Dart.
 version: 1.0.0
 repository: https://github.com/schultek/codable
