add progressive json format

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ topics:
 dependencies:
   # TODO: Replace with own implementation
   crimson: ^0.3.1
+  async: ^2.13.0
 
 dev_dependencies:
   collection: ^1.19.1
